--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,6 +144,28 @@ body {
   .btn {
     @apply flex relative overflow-hidden justify-around items-center p-2 px-3 gap-1 w-fit rounded-full
   }
+  /*Hero section*/
+  .hero-movie-details-wrapper{
+   @apply absolute  py-12 z-10 bg-gradient-to-r from-black/95 from-40% via-black/70 via-70% to-black/50 to-100%  w-full h-full
+  }
+  .hero-movie-details-container{
+    @apply flex flex-col absolute w-[90vw] max-w-[1200px] top-[50%] left-[50%] -translate-y-[50%] -translate-x-[50%]  center-absolute text-white
+  }
+  .hero-logo{
+    @apply w-fit md:w-[255px] p-3 pr-4 mb-8 mr-auto bg-red-600/40 border-r-4 border-l-4 border-red-600
+  }
+  .trending-title{
+    @apply my-4 w-fit max-w-[500px] mr-auto text-2xl lg:!text-[4.5rem] !font-extrabold leading-[1.3]
+  }
+  .hero-controls{
+    @apply flex justify-between absolute w-full py-4 sm:p-4 z-20 top-[40%] -translate-y-[-40%]
+  }
+  .hero-btn{
+   @apply flex items-center justify-center md:text-xl rounded-full border-2 border-solid border-gray-400 bg-transparent h-[30px] w-[30px] md:h-[45px] md:w-[45px] p-0
+  }
+
+
+
 
   /* All sections */
   .section {
