--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -211,6 +211,16 @@ body {
     @apply text-red-500
   }
 
+  .add-container{
+    @apply flex flex-col gap-4 justify-center items-center
+  }
+  .add-container_inner-el{
+    @apply h-10 w-10 p-1 flex justify-center items-center rounded-full bg-white/50
+  }
+  .add-container_icon-wrapper{
+    @apply flex items-center justify-center rounded-full bg-white text-red-600 hover:text-white hover:bg-red-600 text-xl p-1
+  }
+  
 
   .footer {
     @apply flex flex-col gap-4 md:flex-row md:gap-0 justify-between flex-wrap p-4
