--- a/src/index.css
+++ b/src/index.css
@@ -101,8 +101,9 @@ body {
     font-size: 3.2rem;
     font-weight: 800;
     text-transform: uppercase;
-    background: url("../../public/texure.jpg") no-repeat center;
+    background: url("@assets/images/texure.jpg") no-repeat center;
     background-size: cover;
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
@@ -114,7 +115,7 @@ body {
   }
 
   .loading {
-    background: #06121e url('../../public/loader.svg') no-repeat scroll center center;
+    background: #06121e url('@assets/images/loader.svg') no-repeat scroll center center;
     height: 100%;
     width: 100%;
     background-size: 38%;
@@ -133,7 +134,19 @@ body {
     height: 100%;
     position: relative;
   }
- 
+  [data-placeholder]::after {
+    content: " ";
+    box-shadow: 0 0 50px 9px rgba(254,254,254);
+    position: absolute;
+    top: 0;
+    left: -100%;
+    height: 100%; 
+    animation: load 1s infinite;
+}
+@keyframes load {
+    0%{ left: -100%}
+    100%{ left: 150%}
+}
 }
 
 @layer components {
